Fixed class name for home choice p text and fixed text align center inheriting to popup

--- a/client/src/components/LandingPageSections/YourHomeYourChoiceSection/styles.css
+++ b/client/src/components/LandingPageSections/YourHomeYourChoiceSection/styles.css
@@ -12,7 +12,6 @@
   gap: 2rem;
   padding: 4rem 2rem;
   flex-wrap: wrap;
-  text-align: center;
   font-family: 'Open Sans', sans-serif;
 }
 
